Tests/project2/errors/emptyblock.flm
/* This tests for an empty block */

fun foo()
    begin
    begin end;
    a := 2 + 3
    end


        
